@@ -2,6 +2,7 @@ Revision history for Database-Abstraction
 
 0.34
 	Fix logger with array test when a configuration file has been set up
+	Allow execute() to take an argument(s)
 
 0.33	Sat Oct 18 18:35:46 EDT 2025
 	Using undef to searches sets IS NULL
